compiler/testData/diagnostics/testsWithStdLib/experimental/noRetentionAfter.kt
// !USE_EXPERIMENTAL: kotlin.RequiresOptIn
// !LANGUAGE: +ExplicitBinaryRetentionForOptInAnnotations

<!EXPERIMENTAL_ANNOTATION_WITH_WRONG_RETENTION!>@RequiresOptIn
annotation class ExperimentalAPI<!>
